# clipdrop_bot

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
src/: config.py  downloader.py  env.py  file_lock.py  job_store.py  logging_utils.py  service_api.py  telegram_access_store.py  telegram_bot.py  url_extractors.py  worker.py
src/cli/: service.py  stack.py  telegram_bot.py  worker.py
tests/: conftest.py  test_context_buffer.py  test_downloader.py  test_job_store.py  test_service_api.py  test_telegram_access_store.py  test_telegram_bot.py  test_telegram_bot_access.py  test_telegram_bot_auth.py  test_url_extractors.py  test_worker.py
